# oapi

./: .gitlab-ci.yml  CHANGELOG  Cargo.toml  LICENSE  README.md
examples/: ext_parsing.rs  simple_parsing.rs
oapi/: Cargo.toml
oapi/examples/: ext_parsing.rs
oapi/src/: check.rs  error.rs  lib.rs  oapi_root.rs
oapi/src/objects/: components.rs  document.rs  example.rs  example_selector.rs  external_documentation.rs  info.rs  oauth_flow_authorization_code.rs  oauth_flow_client_credentials.rs  oauth_flow_implicit.rs  operation.rs  path_item.rs  response.rs  security_scheme.rs  security_scheme_api_key.rs  server.rs
oapi/src/objects/schema/: mod.rs  numeric_format.rs  numeric_minimum.rs  schema.rs  schema_array.rs  schema_discriminator.rs  schema_numeric.rs  schema_object.rs  schema_xml.rs  string_format.rs
oapi/tests/documents/: checks.rs  extensions.rs  mod.rs
oapi/tests/documents/test_docs/: check_links_type.yml  check_parameter_dup_path.yml  check_parameter_required_in_path.yml  check_unique_operation_id.yml  openapi.json  openapi.yml  openapi_bundled.json
oapi_derive/: Cargo.toml
oapi_derive/src/: check.rs  ext.rs  lib.rs  utils.rs
oapi_proc_macro/: Cargo.toml
oapi_proc_macro/src/: check.rs  ext.rs  lib.rs  utils.rs
src/: check.rs  document_core.rs  error.rs  extension_extractor.rs  extensions.rs  json_schemas.rs  lib.rs  oapi_root.rs  operators.rs  schemas.rs
src/objects/: api_key_location.rs  callback.rs  components.rs  contact.rs  discriminator.rs  document.rs  encoding.rs  example.rs  example_selector.rs  external_documentation.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  oauth_flow.rs  oauth_flow_authorization_code.rs  oauth_flow_client_credentials.rs  oauth_flow_implicit.rs  oauth_flow_password.rs  operation.rs  parameter.rs  parameter_location.rs  parameter_style.rs  path_item.rs  request_body.rs  response.rs  security_oauth2.rs  security_open_id_connect.rs  security_scheme.rs  security_scheme_api_key.rs  security_scheme_http.rs  security_scheme_oauth2.rs  security_scheme_open_id_connect.rs  server.rs  server_variable.rs  tag.rs
src/objects/schema/: mod.rs  numeric_format.rs  numeric_maximum.rs  numeric_minimum.rs  schema.rs  schema_additional_item.rs  schema_array.rs  schema_common.rs  schema_discriminator.rs  schema_numeric.rs  schema_object.rs  schema_string.rs  schema_xml.rs  string_format.rs
tests/: mod.rs
tests/documents/: checks.rs  extensions.rs  mod.rs  parse_valid.rs
tests/documents/test_docs/: check_links_operation_id_exists.yml  check_parameter_absent_path.yml  check_semver_bad_formatted.yml  check_semver_too_high.yml  check_semver_too_low.yml  extensions.yml
