[package]
name = "oapi"
version = "0.1.2"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["openapi", "swagger", "parsing"]
description = "OpenApi document parser"
repository = "https://github.com/basiliqio/oapi"

[dependencies]
sppparse = { version = "0.1.2", features = ["url", "semver"] }
serde = "1"
getset = "0.1"
serde_json = "1"
thiserror = "1"
oapi_derive = "0.1.2"
semver = { version = "0.11.0", features = ["serde"] }
serde-enum-str = "0.4.0"

[dev-dependencies]
serde_test = "1.0.176"
[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                          # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
