[package]
name = "oapi_derive"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "Derive macro for OApi"
repository = "https://gitlab.com/basiliq/oapi"
keywords = ["openapi", "swagger", "parsing", "derive", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
synstructure = "0.12"
proc-macro2 = "1"
proc-macro-crate = "0.1.5"
syn = { version = "1", features = ["derive", "parsing"] }
proc-macro-error = "1.0.4"
